--- a/web/templates/confirm_delete.html
+++ b/web/templates/confirm_delete.html
@@ -2,9 +2,13 @@
 
 {% block content %}
 <h2>刪除記錄</h2>
+{% if user.is_authenticated %}
 <p>您確定要刪除「{{ object }}」這筆記錄嗎?</p>
 <form action="" method="POST">
   {% csrf_token %}
   <input type="submit" action="" value="是的，我要刪除" />
 </form>
+{% else %}
+<p>你沒有權限刪除「{{ object }}」這筆記錄 !</p>
+{% endif %}
 {% endblock %}
